--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
       href="https://api.fontshare.com/v2/css?f[]=chillax@1,600,500,300,700,400,200&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <script type="text/javascript">
       (function (l) {
         if (l.search[1] === "/") {
